--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,4 +1,5 @@
-<h1><%= cocktail.name %></h1>
+<h1><%= @cocktail.name %></h1>
+<%= link_to "Add dose", new_cocktail_dose_path(@cocktail) %>
 <%= link_to "Back to Cocktails", cocktails_path %>
 
 
@@ -24,4 +25,4 @@
   </tbody>
 </table>
 
- <%= render "doses/new", cocktail: @cocktail, dose: @dose %>
+
