mister cocktal with typed and images

--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,6 +1,7 @@
+<div class="banner"  style='background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0, 0, 0, 0.3)), url(https://source.unsplash.com/featured/?{cocktails},{drinks});'>
 <h1>Create a New Cocktail</h1>
-
 <%= simple_form_for @cocktail do |f| %>
   <%= f.input :name %>
-  <%= f.button :submit, class: 'btn btn-primary btn-lg' %>
+  <%= f.button :submit, class: 'btn btn-danger btn-sm' %>
   <% end %>
+</div>
