--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,10 +1,24 @@
-<h1>Cocktails</h1>
+<div class="banner"  style='background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0, 0, 0, 0.3)), url(https://images.unsplash.com/photo-1588285545754-55de2851a0a0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2245&q=80);'>
+  <div class="container">
+    <p><span id="banner-typed-text"></span></p>
+      <h1>Chose to <strong>have a drink</strong></h1>
+        <p>Best cocktails ever</p>
+    <%= link_to "Add a cocktail", new_cocktail_path, class: "btn btn-danger" %>
+  </div>
+</div>
 
-  <%= link_to "Add a cocktail", new_cocktail_path, class: "btn btn-primary btn-lg" %>
 
-
-   <% @cocktails.each do |cocktail| %>
-       <h2><%= link_to cocktail.name, cocktail_path(cocktail) %></h2>
-  <%= link_to "", cocktail_path(cocktail) %>
-
+<div class='container'>
+  <div class='row'>
+    <% @cocktails.each do |cocktail| %>
+    <div class='col-12 col-md-6 col-lg-3'>
+       <div class='card' style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://source.unsplash.com/500x400/?cocktail);">
+          <div class="card-description">
+            <h4><%= link_to cocktail.name, cocktail_path(cocktail), class: "btn btn-ghost" %></h4>
+          </div>
+          <%= link_to "", cocktail_path(cocktail) %>
+        </div>
+      </div>
     <% end %>
+  </div>
+</div>
